@@ -77,7 +77,7 @@ qacct_messages:
 # rules to build binaries
 ###############################################################################
 qacct: $(QACCT_OBJS) $(QACCT_ADD_OBJS) $(QACCT_LIB_DEPENDS)
-	$(CC) -o $@ $(LFLAGS) $(QACCT_OBJS) $(QACCT_ADD_OBJS) $(QACCT_ADD_LIBS) $(SLIBS) $(LIBS)
+	$(LD_WRAPPER) $(CC) -o $@ $(LFLAGS) $(QACCT_OBJS) $(QACCT_ADD_OBJS) $(QACCT_ADD_LIBS) $(SLIBS) $(LIBS)
 
 ###############################################################################
 # include dependencies for object files generated by sge_depend
