@@ -69,7 +69,7 @@ qalter_messages:
 # rules to build binaries
 ###############################################################################
 qalter: $(QALTER_OBJS) $(QALTER_ADD_OBJS) $(QALTER_LIB_DEPENDS)
-		$(CC) -o $@ $(LFLAGS) $(QALTER_OBJS) $(QALTER_ADD_OBJS) $(QALTER_ADD_LIBS) $(SLIBS) $(LIBS)
+		$(LD_WRAPPER) $(CC) -o $@ $(LFLAGS) $(QALTER_OBJS) $(QALTER_ADD_OBJS) $(QALTER_ADD_LIBS) $(SLIBS) $(LIBS)
 
 ###############################################################################
 # include dependencies for object files generated by sge_depend
