@@ -77,7 +77,7 @@ qconf_messages:
 # rules to build binaries
 ###############################################################################
 qconf: $(QCONF_OBJS) $(QCONF_ADD_OBJS) $(QCONF_LIB_DEPENDS)
-		$(CC) -o $@ $(LFLAGS) $(QCONF_OBJS) $(QCONF_ADD_OBJS) $(QCONF_ADD_LIBS) $(SLIBS) $(LIBS)
+		$(LD_WRAPPER) $(CC) -o $@ $(LFLAGS) $(QCONF_OBJS) $(QCONF_ADD_OBJS) $(QCONF_ADD_LIBS) $(SLIBS) $(LIBS)
 
 ###############################################################################
 # include dependencies for object files generated by sge_depend
