@@ -68,7 +68,7 @@ qdel_messages:
 # rules to build binaries
 ###############################################################################
 qdel: $(QDEL_OBJS) $(QDEL_ADD_OBJS) $(QDEL_LIB_DEPENDS)
-		$(CC) -o $@ $(LFLAGS) $(QDEL_OBJS) $(QDEL_ADD_OBJS) $(QDEL_ADD_LIBS) $(SLIBS) $(LIBS)
+		$(LD_WRAPPER) $(CC) -o $@ $(LFLAGS) $(QDEL_OBJS) $(QDEL_ADD_OBJS) $(QDEL_ADD_LIBS) $(SLIBS) $(LIBS)
 
 ###############################################################################
 # include dependencies for object files generated by sge_depend
