@@ -70,7 +70,7 @@ qevent_messages:
 # rules to build binaries
 ###############################################################################
 qevent: $(QEVENT_OBJS) $(QEVENT_ADD_OBJS) $(QEVENT_LIB_DEPENDS)
-		$(CC) -o $@ $(LFLAGS) $(QEVENT_OBJS) $(QEVENT_ADD_OBJS) $(QEVENT_ADD_LIBS) $(SLIBS) $(LIBS)
+		$(LD_WRAPPER) $(CC) -o $@ $(LFLAGS) $(QEVENT_OBJS) $(QEVENT_ADD_OBJS) $(QEVENT_ADD_LIBS) $(SLIBS) $(LIBS)
 
 ###############################################################################
 # include dependencies for object files generated by sge_depend
