@@ -74,7 +74,7 @@ qhost_messages:
 # rules to build binaries
 ###############################################################################
 qhost: $(QHOST_OBJS) $(QHOST_ADD_OBJS) $(QHOST_LIB_DEPENDS)
-		$(CC) -o $@ $(LFLAGS) $(QHOST_OBJS) $(QHOST_ADD_OBJS) $(QHOST_ADD_LIBS) $(SLIBS) $(LIBS)
+		$(LD_WRAPPER) $(CC) -o $@ $(LFLAGS) $(QHOST_OBJS) $(QHOST_ADD_OBJS) $(QHOST_ADD_LIBS) $(SLIBS) $(LIBS)
 
 ###############################################################################
 # include dependencies for object files generated by sge_depend
