@@ -68,7 +68,7 @@ qmod_messages:
 # rules to build binaries
 ###############################################################################
 qmod: $(QMOD_OBJS) $(QMOD_ADD_OBJS) $(QMOD_LIB_DEPENDS)
-		$(CC) -o $@ $(LFLAGS) $(QMOD_OBJS) $(QMOD_ADD_OBJS) $(QMOD_ADD_LIBS) $(SLIBS) $(LIBS)
+		$(LD_WRAPPER) $(CC) -o $@ $(LFLAGS) $(QMOD_OBJS) $(QMOD_ADD_OBJS) $(QMOD_ADD_LIBS) $(SLIBS) $(LIBS)
 
 ###############################################################################
 # include dependencies for object files generated by sge_depend
