@@ -70,7 +70,7 @@ qrsh_messages:
 # rules to build binaries
 ###############################################################################
 qrsh_starter: $(QRSH_OBJS) $(QRSH_ADD_OBJS) $(QRSH_LIB_DEPENDS)
-	$(CC) -o $@ $(LFLAGS) $(QRSH_OBJS) $(QRSH_ADD_OBJS) $(QRSH_ADD_LIBS) $(LIBS)
+	$(LD_WRAPPER) $(CC) -o $@ $(LFLAGS) $(QRSH_OBJS) $(QRSH_ADD_OBJS) $(QRSH_ADD_LIBS) $(LIBS)
 
 ###############################################################################
 # include dependencies for object files generated by sge_depend
