@@ -70,7 +70,7 @@ qsh_messages:
 # rules to build binaries
 ###############################################################################
 qsh: $(QSH_OBJS) $(QSH_ADD_OBJS) $(QSH_LIB_DEPENDS)
-	$(CC) -o $@ $(LFLAGS) $(QSH_OBJS) $(QSH_ADD_OBJS) $(QSH_ADD_LIBS) $(SLIBS) $(LIBS)
+	$(LD_WRAPPER) $(CC) -o $@ $(LFLAGS) $(QSH_OBJS) $(QSH_ADD_OBJS) $(QSH_ADD_LIBS) $(SLIBS) $(LIBS)
 
 ###############################################################################
 # include dependencies for object files generated by sge_depend
