@@ -76,7 +76,7 @@ qstat_messages:
 # rules to build binaries
 ###############################################################################
 qstat: $(QSTAT_OBJS) $(QSTAT_ADD_OBJS) $(QSTAT_LIB_DEPENDS) 
-		$(CC) -o $@ $(LFLAGS) $(QSTAT_OBJS) $(QSTAT_ADD_OBJS) $(QSTAT_ADD_LIBS) $(SLIBS) $(LIBS)
+		$(LD_WRAPPER) $(CC) -o $@ $(LFLAGS) $(QSTAT_OBJS) $(QSTAT_ADD_OBJS) $(QSTAT_ADD_LIBS) $(SLIBS) $(LIBS)
 
 ###############################################################################
 # include dependencies for object files generated by sge_depend
