@@ -72,7 +72,7 @@ qsub_messages:
 # rules to build binaries
 ###############################################################################
 qsub: $(QSUB_OBJS) $(QSUB_ADD_OBJS) $(QSUB_LIB_DEPENDS)
-		$(CC) -o $@ $(LFLAGS) $(QSUB_OBJS) $(QSUB_ADD_OBJS) $(QSUB_ADD_LIBS) $(SLIBS) $(LIBS)
+		$(LD_WRAPPER) $(CC) -o $@ $(LFLAGS) $(QSUB_OBJS) $(QSUB_ADD_OBJS) $(QSUB_ADD_LIBS) $(SLIBS) $(LIBS)
 
 ###############################################################################
 # include dependencies for object files generated by sge_depend
