@@ -71,16 +71,16 @@ commd_messages:
 # rules to build binaries
 ###############################################################################
 sge_commd:	$(COMMD_OBJS) $(COMMD_ADD_OBJS) $(COMMD_LIB_DEPENDS)
-	$(CC) $(CFLAGS) $(LFLAGS) -o $@ $(COMMD_OBJS) $(COMMD_ADD_OBJS) $(COMMD_ADD_LIBS) $(SLIBS) $(LIBS)
+	$(LD_WRAPPER) $(CC) $(CFLAGS) $(LFLAGS) -o $@ $(COMMD_OBJS) $(COMMD_ADD_OBJS) $(COMMD_ADD_LIBS) $(SLIBS) $(LIBS)
 
 commdcntl:	commdcntl.o $(GDILIB) $(SECLIBS) $(KRBLIBS) $(CULLLIB) $(COMMLIB) $(UTILIB) $(RMONLIB) $(RMONLIB)
-	$(CC) $(CFLAGS) $(LFLAGS) -o $@ commdcntl.o $(GDILIB) $(SECLIBS) $(KRBLIBS) $(CULLLIB)  $(COMMLIB) $(RMONLIB) $(COMMD_ADD_OBJS) $(COMMD_ADD_LIBS) $(SLIBS) $(LIBS)
+	$(LD_WRAPPER) $(CC) $(CFLAGS) $(LFLAGS) -o $@ commdcntl.o $(GDILIB) $(SECLIBS) $(KRBLIBS) $(CULLLIB)  $(COMMLIB) $(RMONLIB) $(COMMD_ADD_OBJS) $(COMMD_ADD_LIBS) $(SLIBS) $(LIBS)
 
 tstsnd:	tstsnd.o $(CULLLIB) $(COMMLIB) $(UTILIB) $(RMONLIB)
-	$(CC) $(CFLAGS) $(LFLAGS) -o $@ tstsnd.o $(COMMD_ADD_OBJS) -lcull -lcom -luti -lrmon $(LIBS)
+	$(LD_WRAPPER) $(CC) $(CFLAGS) $(LFLAGS) -o $@ tstsnd.o $(COMMD_ADD_OBJS) -lcull -lcom -luti -lrmon $(LIBS)
 
 tstrcv: tstrcv.o $(CULLLIB) $(COMMLIB) $(UTILIB) $(RMONLIB)
-	$(CC) $(CFLAGS) $(LFLAGS) -o $@ tstrcv.o $(COMMD_ADD_OBJS) -lcull -lcom -luti -lrmon $(LIBS)
+	$(LD_WRAPPER) $(CC) $(CFLAGS) $(LFLAGS) -o $@ tstrcv.o $(COMMD_ADD_OBJS) -lcull -lcom -luti -lrmon $(LIBS)
 
 ###############################################################################
 # include dependencies for object files generated by sge_depend
