@@ -108,7 +108,7 @@ execd_messages:
 # rules to build binaries
 ###############################################################################
 sge_execd:	$(EXECD_OBJS) $(EXECD_ADD_OBJS) $(EXECD_LIB_DEPENDS)
-		$(CC) -o $@ $(LFLAGS) $(EXECD_OBJS) $(EXECD_ADD_OBJS) $(EXECD_ADD_LIBS) $(SLIBS) $(LIBS) $(LOADAVGLIBS)
+		$(LD_WRAPPER) $(CC) -o $@ $(LFLAGS) $(EXECD_OBJS) $(EXECD_ADD_OBJS) $(EXECD_ADD_LIBS) $(SLIBS) $(LIBS) $(LOADAVGLIBS)
 
 ###############################################################################
 # include dependencies for object files generated by sge_depend
