@@ -139,7 +139,7 @@ qmaster_messages:
 # rules to build binaries
 ###############################################################################
 sge_qmaster:	$(QMASTER_OBJS) $(QMASTER_ADD_OBJS) $(QMASTER_LIB_DEPENDS)
-		$(CC) -o $@ $(LFLAGS) $(QMASTER_OBJS) $(QMASTER_ADD_OBJS) $(QMASTER_ADD_LIBS) $(SLIBS) $(LIBS) 
+		$(LD_WRAPPER) $(CC) -o $@ $(LFLAGS) $(QMASTER_OBJS) $(QMASTER_ADD_OBJS) $(QMASTER_ADD_LIBS) $(SLIBS) $(LIBS) 
 
 ###############################################################################
 # include dependencies for object files generated by sge_depend
