@@ -73,7 +73,7 @@ shadowd_messages:
 # rules to build binaries
 ###############################################################################
 sge_shadowd:	$(SHADOWD_OBJS) $(SHADOWD_ADD_OBJS) $(SHADOWD_LIB_DEPENDS)
-		$(CC) -o $@ $(LFLAGS) $(SHADOWD_OBJS) $(SHADOWD_ADD_OBJS) $(SHADOWD_ADD_LIBS) $(SLIBS) $(LIBS)
+		$(LD_WRAPPER) $(CC) -o $@ $(LFLAGS) $(SHADOWD_OBJS) $(SHADOWD_ADD_OBJS) $(SHADOWD_ADD_LIBS) $(SLIBS) $(LIBS)
 
 ###############################################################################
 # include dependencies for object files generated by sge_depend
