@@ -85,7 +85,7 @@ shepherd_messages:
 # rules to build binaries
 ###############################################################################
 sge_shepherd:	$(SHEPHERD_OBJS) $(SHEPHERD_ADD_OBJS) $(SHEPHERD_LIB_DEPENDS)
-		$(CC) -I$(SHEPHERD_DIR) $(CFLAGS) $(LFLAGS) -o $@ $(SHEPHERD_OBJS) $(SHEPHERD_ADD_OBJS) $(SHEPHERD_ADD_LIBS) $(SLIBS) $(LIBS)
+		$(LD_WRAPPER) $(CC) -I$(SHEPHERD_DIR) $(CFLAGS) $(LFLAGS) -o $@ $(SHEPHERD_OBJS) $(SHEPHERD_ADD_OBJS) $(SHEPHERD_ADD_LIBS) $(SLIBS) $(LIBS)
 
 ###############################################################################
 # include dependencies for object files generated by sge_depend
